--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-13-firebase-starter",
+  "name": "sendawa",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -31,6 +31,10 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.7"
   }
 }
