--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.17.9",
     "@types/node": "20.8.10",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.3",
-    "firebase": "^10.4.0",
+    "firebase": "^10.7.1",
     "lucide-react": "^0.303.0",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.7"
