--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
